# Integrated-Air-Defense-System-Simulator-IADS-

./: # PROMPT_ENGINEERING_SKILL.md  .gitignore  3D_IMPLEMENTATION_PLAN.md  BOT_API.md  CLEANUP_REPORT.md  LICENSE  README.md  build.bat  build_release.bat  desktop.py  iads-server.spec  main.py  protocol-schema.json  run.bat  run_dev.bat  run_training.ps1
backend/: compare_policies.py  comparison_coordinator.py  requirements.txt  server.py  simulation_runner.py
backend/simulation/: observation_encoder.py  physics.py  policies.py  radar.py  scenario_generator.py  simulator.py  tournament.py  train_sb3.py  trained_policy.py
backend/simulation/gym_env/: __init__.py  env.py
backend/tests/: test_comparison_coordinator.py  test_integration.py  test_observation_encoder.py  test_trained_policy.py
controller/: sim_controller.py
docs/: ARCHITECTURE.md  BOT_API.md  CONTRIBUTING.md  EVALUATION.md  TRAINING.md  protocol-schema.json
evaluation/tournament_results/tournament_stats_1000/: all_scores.json  summary.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/OperationalAssessment/: EventRecorder.ts  MetricsCalculator.ts  OperationalAssessment.tsx  OverviewTab.tsx  (+2 more)
model/: simulation.py
scripts/: run_dev.ps1
training/: run_training.ps1
view/: main_window.py
(+63 files in other folders)
