[package]
name = "iads-command-center"
version = "1.0.0"
description = "Syntra Command — AI-Powered Command & Control Platform"
authors = ["Syntra"]
edition = "2021"

[package.metadata]
tauri-bundler = { icon = ["icons/icon.ico"] }

[lib]
name = "iads_command_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
